# VISMA-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  build_swig.sh  generate_txt_from_obj.py  install.sh  package.xml  setup.py  test_camera.py  test_render_basic.py  test_render_pool.py
CMakeModules/: FindGMP.cmake  FindMPFR.cmake  FindMPFR_CXX.cmake
app/: MOT_visma.cpp  SODFT_visma.cpp  SORBT_linemod.cpp  SORBT_rigidpose.cpp  SOT_visma.cpp  evaluation_scenenn.cpp  floor.cpp  inspector.cpp  linemod.cpp  multiple_object_tracking.cpp  preprocess_mesh.cpp  rigidpose.cpp  rosviewer.cpp  single_object_tracking.cpp  tool.cpp  viewer.cpp  viewer.h
cfg/: DFTracker.json  camera.json  camera_icl.json  camera_kitti.json  camera_scenenn.json  car_tracker.json  chair_tracker.json  chair_tracker_icl.json  couch_tracker.json  multiple_object_tracking.json  region_based_tracker.json  rigidpose.json  scene.json  scene_icl.json  scenenn.json  single_object_tracking.json  tool.json  viewer.rviz
core/: se3.h
include/: DFtracker.h  dataloaders.h  dataset_loaders.h  distance_transform.h  eigen_alias.h  geometry.h  gravity_aligned_tracker.h  initializer.h  io_utils.h  octree.h  oned_search.h  particle.h  region_based_tracker.h  renderer.h  renderer_utils.h  rodrigues.h  scene.h  tool.h  tracker.h  tracker_utils.h  ukf.h  utils.h
include/common/: eigen_alias.h  matdiff.h
include/pix3d/: dataloader.h  diff_tracker.h
include/shaders/: edgelist.comp  likelihood.comp  maxpool.comp
installation_scripts/: install.sh  print_stats.sh
launch/: viewer.launch  viewer.xml
markdown/: ComputeShader.md  OpenGLNotes.md  README.md  interop.md
pix3d/: diff_tracker.cpp  generate_control_points.cpp  pix3dloader.h  test_loader.cpp  test_tracker.cpp
protocols/: vlslam.proto
scripts/: bbox_azimuth_augment.py  bbox_loader.py  bbox_shapeid_augment.py  edgemap_loader.py  extract_edgemap.py  network_utils.py  visualize_mats.py  visualize_particles.py  visualize_pointcloud.py  visualize_temporal_stats.py
scripts/pixelnet.pytorch/: .gitignore  README.md  eval.py  plan.md  requirements.txt  setup.py  test_vgg.py  train.py  train_fcn.py
scripts/pixelnet.pytorch/pixelnet/: __init__.py  dataset.py  dataset_hed.py  fcn.py  helper.py  hypercolumn.py  hypercolumn_sparse.py  segnet.py
src/: DFtracker.cpp  annotation.cpp  bresenham.cpp  dataloaders.cpp  dataset_loaders.cpp  evaluation.cpp  gravity_aligned_tracker.cpp  io_utils.cpp  matdiff.cpp  oned_search.cpp  region_based_tracker.cpp  renderer.cpp  renderer_utils.cpp  scene.cpp  scene_inference.cpp  tracker.cpp  tracker_init.cpp  tracker_sir.cpp  tracker_utils.cpp  utils.cpp  visualization.cpp
src/common/: matdiff.cpp  utils.cpp
src/pix3d/: diff_tracker.cpp  generate_control_points.cpp  pix3d.cpp  test_loader.cpp  test_tracker.cpp
test/: test_delaunay.cpp  test_differential.cpp  test_distance_transform.cpp  test_folly_json.cpp  test_kitti.cpp  test_multirenderer.cpp  test_mydt.cpp  test_objloader.cpp  test_octree.cpp  test_onedsearch.cpp  test_particles.cpp  test_protobufloader.cpp  test_region.cpp  test_render.cpp  test_surface_error.cpp  test_tracker.cpp  test_ukf.cpp  test_ukf_mackey_glass.cpp  test_undistorter.cpp  test_wireframe.cpp
tracker/: DFtracker.cpp  DFtracker.h  bresenham.h  dataloaders.cpp  dataloaders.h  geometry.h  gravity_aligned_tracker.h  initializer.cpp  initializer.h  lcm_msg_handlers.h  message_utils.cpp  message_utils.h  parallel_kernels.h  region_based_tracker.cpp  region_based_tracker.h  renderer.h  scene.cpp  scene.h  scene_inference.cpp  tracker.cpp  tracker_utils.cpp  tracker_utils.h
tracker/shaders/: edgelist.comp  edgelist_comp.i  gaussian_blur.comp  gaussian_blur_comp.i  likelihood_comp.i  maxpool_comp.i  maxpool_shared.comp  oned.comp  oned_comp.i
