<package>
    <name>vlslam_plus</name>
    <version>0.0.1</version>
    <description>
        Visual-Inertial-Semantic SLAM
    </description>
    <maintainer email="hzhsfxh@gmail.com">Xiaohan Fei</maintainer>
    <license> BSD </license>

    <url>feixh.github.io</url>
    <author>feixh</author>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>roscpp</run_depend>

</package>


